# sdet-framework-lab

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
config/: settings.sauce_demo_ui.json
docs/: index.md
src/common/helpers/: config_manager.py  enums.py
src/common/utils/: base_logger.py  log_action.py
src/sauce_demo_ui/: conftest.py
src/sauce_demo_ui/framework/config/: ui_settings.py
src/sauce_demo_ui/framework/logging/: log_action.py  logger.py
src/sauce_demo_ui/framework/ui/: base_page.py  element.py
src/sauce_demo_ui/pages/: base_page.py  home_page.py  login_page.py
src/sauce_demo_ui/tests/: login_tests.py  test_login.py
src/sauce_demo_ui/utils/: log_action.py  logger.py
ui-playwright-lab/src/pages/: home_page.py  login_page.py
ui-playwright-lab/src/tests/: login_tests.py
