[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdet-framework-lab"
version = "0.1.0"
description = "Automation testing frameworks lab (UI + API)"
authors = [{ name = "Doroshchuk" }]
requires-python = ">=3.10"
dependencies = [
    "pytest==8.4.2",
    "pytest-base-url==2.1.0",
    "pytest-playwright==0.7.1",
    "playwright==1.55.0",
    "python-dotenv==1.1.0",
    "dotenv==0.9.9",
    "loguru==0.7.3"
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["src"]