[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdet-framework-lab"
version = "0.1.0"
description = "Automation testing frameworks lab (UI + API)"
authors = [{ name = "Doroshchuk" }]
requires-python = ">=3.10"
dependencies = [
    "pytest==8.4.2",
    "pytest-base-url==2.1.0",
    "pytest-playwright==0.7.1",
    "playwright==1.55.0",
    "python-dotenv==1.1.0",
    "loguru==0.7.3",
    "pydantic>=2.0,<3.0"
]

# setuptools configuration
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
common = ["py.typed"]
sauce_demo_ui = ["py.typed"]

# pytest configuration
[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["src"]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "black"
]